Added missing methods for project and reorganized the book and student data